# pwap

./: .env  .gitignore  .pydevproject  LICENSE  README.md  pyproject.toml  requirements.txt
lib/: main-server-only.py  main.py
lib/spos/: config.py  testPrinter.py
lib/spos/api/: setup.py
lib/spos/api/pupil/: cntrl.py  dto.py
lib/spos/api/pupilvaluation/: cntrl.py  dto.py
lib/spos/api/pupilvaluationset/: cntrl.py  dto.py
lib/spos/api/report/: cntrl.py  dto.py
lib/spos/api/school/: cntrl.py  dto.py
lib/spos/api/schoolclass/: cntrl.py  dto.py
lib/spos/api/valuation/: cntrl.py  dto.py
lib/spos/api/valuationdetail/: cntrl.py  dto.py
lib/spos/api/valuationdetailtext/: cntrl.py  dto.py
lib/spos/domain/: report.py
lib/spos/storage/db/: setup.py  util.py
lib/spos/storage/db/pupil/: glue.py  orm.py
lib/spos/storage/db/pupilvaluation/: glue.py  orm.py
lib/spos/storage/db/pupilvaluationset/: glue.py  orm.py
lib/spos/storage/db/school/: glue.py  orm.py
lib/spos/storage/db/schoolclass/: glue.py  orm.py
lib/spos/storage/db/valuation/: glue.py  orm.py
lib/spos/storage/db/valuationdetail/: glue.py  orm.py
lib/spos/storage/db/valuationdetailtext/: glue.py  orm.py
lib/spos/storage/spreadsheet/: __init__.py  db01.xlsm  db02.xlsx  valuation.py  xlsx.py
lib/spos/ui/app/: client.py
lib/spos/ui/webapp/: README.md  package.json  vue.config.js
lib/spos/ui/webapp/src/: App.vue  main.js
lib/spos/ui/webapp/src/client/: common.js  spos.js  spos.ts  (+1 more)
release/: SposOneDir.spec  SposOneFile.spec  run.py
tests/: demo.docx  testdocx.py  tests_general.py
(+16 files in other folders)
